tests/datakinds/should_fail/all.T

test('DataKind1', normal, compile_fail, [''])
test('DataKind2', normal, compile_fail, [''])
test('DataKind3', normal, compile_fail, [''])
test('DataKind4', normal, compile_fail, [''])
test('DataKind5', normal, compile_fail, [''])
test('DataKind6', normal, compile_fail, [''])
test('DataKind7', normal, compile_fail, [''])
